Worked on bootstrap exercise

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1 h2{
 body{
     background-image: url('../Photos/nphrgz8yfnjylrwfr0yl.webp');
     color: #fff;
-    font-family: 'Roboto', sans-serif, Arial, Helvetica, sans-serif;
+    font-family: 'DotGothic16', sans-serif;
 }
 li{
     list-style: square;
